[package]
name = "regretti"
version = "0.1.0"
edition = "2018"

[dependencies]
ahash = "0.7.4"
colored = "2.0.0"
fasteval = "0.2.4"
logos = "0.12.0"
memmap = "0.7.0"
once_cell = "1.8.0"
parking_lot = "0.11.1"
# rayon = "1.5.1"
regex = { version = "1.5.4", features = ["perf-dfa", "perf-literal"] }
snailquote = "0.3.0"
unescape = "0.1.0"
