cabal-version:      2.4
name:               autocomf
version:            0.1.0.0

executable autocomf
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.1.0,
                      text,
                      regex-tdfa >=1.2,
                      containers,
                      megaparsec,
                      wizards,
                      haskeline
    hs-source-dirs:   src
    ghc-options: -Wall -Wcompat -Wredundant-constraints -Wincomplete-record-updates -Wmissing-export-lists
    default-language: Haskell2010
