[package]
name = "beatsaber"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "bsc"
path = "src/bsc.rs"

[dependencies]
logos = "0.12"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm12-0"] }
llvm-sys = "120"
anyhow = "1.0"
clap = "3.0.0-beta.4"
codespan-reporting = "0.11"
unescape = "0.1"
cc = "1"
