cabal-version:      2.4
name:               cdcsubmission
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             romes
maintainer:         rodrigo.m.mesquita@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable cdcsubmission
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        Core,
        Lexer,
        Parser


    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.1.0,
        parsec ^>=3.1.14.0,
        gloss ^>=1.13.2.1
    hs-source-dirs:   app
    default-language: Haskell2010
