cabal-version:      2.4
name:               dyniec
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license: BSD-3-Clause
author:             Paweł Dybiec
maintainer:         pawel@dybiec.info

-- A copyright notice.
copyright: Copyright (C) 2021 Paweł Dybiec
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable dyniec
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.1.0
                    , dyniec-lib
                    , text
    hs-source-dirs:   app
    default-language: Haskell2010
library dyniec-lib
    hs-source-dirs:   lib
    build-depends:    base ^>=4.14.1.0
                    , text
                    , parsec
    exposed-modules: Syntax
                   , Parser
                   , Eval
Test-Suite dyniec-test
    main-is:        test.hs
    hs-source-dirs: test
    type:           exitcode-stdio-1.0
    build-depends: dyniec-lib
                 , base ^>=4.14.1.0
                 , tasty
                 , tasty-hunit
                 , parsec
