[package]
name = "rundown"
version = "0.1.0"
edition = "2018"
license = "MIT"

[dependencies]
anyhow = "1.0.43"
thiserror = "1.0.26"
markdown = { git = "https://github.com/mjkoo/markdown.rs", branch = "ordered-list-generation" }
mdcat = "0.23.2"
structopt = "0.3.22"
pest = "2.1.3"
pest_derive = "2.1.0"
indexmap = "1.7.0"
slugify = "0.1.0"
pulldown-cmark = "0.8.0"
syntect = "4.6.0"
lazy_static = "1.4.0"
