cabal-version: 2.0

name: boros
version: 0.0.0.0
synopsis: Small programming language
description: Please see the README on GitHub at <https://github.com/aionescu/boros#readme>
homepage: https://github.com/aionescu/boros#readme
bug-reports: https://github.com/aionescu/boros/issues
license: GPL-3
license-file: LICENSE.txt
maintainer: alxi.2001@gmail.com
copyright: Copyright (C) 2021 Alex Ionescu
category: Interpreter
build-type: Simple
extra-source-files: README.md

executable boros
  main-is: Main.hs

  other-modules:
    Syntax
    Preprocess
    Parser
    Val
    Intrinsics
    Eval
    Paths_boros

  autogen-modules:
    Paths_boros

  hs-source-dirs: src

  build-depends:
    base >=4.13 && <5
    , containers ^>= 0.6.2
    , unordered-containers ^>= 0.2.14
    , mtl ^>= 2.2.2
    , optparse-applicative ^>= 0.16.1
    , parsec ^>= 3.1.14
    , split ^>= 0.2.3
    , GenericPretty ^>= 1.2.2

  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
    -Wall
    -Wincomplete-uni-patterns

  default-extensions:
    ApplicativeDo
    BangPatterns
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    EmptyCase
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    MagicHash
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    PatternSynonyms
    RankNTypes
    RecordWildCards
    RecursiveDo
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeFamilyDependencies
    TypeOperators
    ViewPatterns

  default-language: Haskell2010
