[package]
name    = "suslang"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "suslang_lib"
path = "src/lib.rs"

[[bin]]
name = "suslang"
path = "src/main.rs"

[dependencies]
quickscope = "0.1"
logos      = "0.12"
structopt  = "0.3"
anyhow     = "1"
