[package]
name = "boole"
version = "0.1.0"
edition = "2018"
description = "langjam submission"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1"
log = "0.4"


[dependencies.serde]
version = "1.0"
features = ["derive"]

