[package]
name = "train-cli"
version = "0.1.0"
edition = "2018"
authors = [
    "Jonathan Dönszelmann <jonabent@gmail.com>",
    "Julius de Jeu <julius@voidcorp.nl>",
    "Jonathan Brouwer <jonathantbrouwer@gmail.com>",
    "Noah Jadoenathmisier <>"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
train = { path = "../train" }
clap = "2.33"


