[package]
name = "train-cli"
version = "0.1.0"
edition = "2018"
authors = [
    "Jonathan Dönszelmann <jonabent@gmail.com>",
    "Julius de Jeu <julius@voidcorp.nl>",
    "Jonathan Brouwer <jonathantbrouwer@gmail.com>",
    "Noah Jadoenathmisier <n.j.m.jadoenathmisier@student.tudelft.nl>"
]

[dependencies]
train = { path = "../train" }
clap = "2.33"
tokio = "1.10.0"
warp = "0.3.1"


