[package]
name = "train-cli"
version = "0.1.0"
edition = "2018"
authors = [
    "Jonathan Dönszelmann <jonabent@gmail.com>",
    "Julius de Jeu <julius@voidcorp.nl>",
    "Jonathan Brouwer <jonathantbrouwer@gmail.com>",
    "Noah Jadoenathmisier <n.j.m.jadoenathmisier@student.tudelft.nl>"
]

[dependencies]
train = { path = "../train" }
clap = "2.33"
tokio = {version="1.10", features=["full"]}
warp = "0.3.1"
open = "2.0.1"
serde = {version="1.0", features=["derive"]}
futures-util = "0.3.16"
log = "0.4"
serde_json = "1.0"
pretty_env_logger = "0.4.0"
thiserror = "1.0.26"
futures = "0.3.16"
async-trait = "0.1.51"
regex = "1.5.4"
sha3 = "0.9.1"
