[package]
name = "train"
version = "0.1.0"
edition = "2018"
description = "langjam submission"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
lazy_static = "1.4.0"
strum = "0.21"
strum_macros = "0.21"
rand = "0.8.4"
thiserror = "1.0.26"
tokio = "1.10.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]

