[package]
name = "gold-frontend"
version = "0.1.0"
edition = "2018"
authors = ["aboss123", "Noah-Kennedy"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
peg = "0.7"
codespan-reporting = "0.11.1"
cranelift-jit = "^0.76.0"
cranelift = "^0.76.0"
cranelift-module = "^0.76.0"
target-lexicon = "^0.12.2"