[package]
name = "comment-errors-test"
version = "0.1.0"
authors = ["Basile Henry <bjm.henry@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comment-errors = { path = "../comment-errors" }
eyre = "0.6.5"
minimad = "0.8.0"
termimad = "0.14.0"
