[package]
name = "dank"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"
name = "dank"
crate-type = ["rlib", "cdylib"]

[[bin]]
path = "src/main.rs"
name = "dank"

[dependencies]
wasm-bindgen = "0.2"
peg = "0.7.0"
ast2str = { git = "https://github.com/optimalstrategy/ast2str" }
clap = "3.0.0-beta.4"

[dev-dependencies]
pretty_assertions = "0.7.2"
