[package]
name = "dank"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"
name = "liner"
crate-type = ["rlib", "cdylib"]

[[bin]]
path = "src/main.rs"
name = "liner"

[dependencies]
wasm-bindgen = "0.2"
peg = { git = "https://github.com/kevinmehall/rust-peg" }
ast2str = { git = "https://github.com/optimalstrategy/ast2str" }
clap = "3.0.0-beta.4"
bumpalo = "3.7.0"
enum-kinds = "0.5.1"
dynfmt = { version = "0.1.5", features = ["curly"] }
codespan-reporting = "0.11.1"

[dev-dependencies]
pretty_assertions = "0.7.2"
